fixing action spacing

--- a/_sass/pages/_action.scss
+++ b/_sass/pages/_action.scss
@@ -11,7 +11,7 @@
     text-transform: uppercase;
     display:block;
     font-size: 16px;
-    margin-top: 12px;
+    margin-top: 7px;
     @include break {
       max-width: 100% !important;
     }
